# AI-from-scratch

./: .gitignore  .gitmodules  README.md  pyproject.toml
ConvolutionalNeuralNetwork/: CNN.ipynb  README.md
GraphConvolutionalNetwork_Pytorch/: GCN.ipynb  GNN_overview.ipynb  HelperFunc.py
GraphNetwork_Pytorch/: GCN.ipynb  GCN_GNN.ipynb  GNN_overview.ipynb  README.md
HandwrittenDigitClassifier_Pytorch/: README.md  main.ipynb
HandwrittenDigitClassifier_Pytorch/Optimizer/: GradientDescent.py
PaperReproduction/: Example1.ipynb
PaperReproduction/1990_Identification_and_Control_of_Dynamical_Systems_Using_Neural_Networks/Example01/: Example1.ipynb
PaperReproduction/1990_Identification_and_Control_of_Dynamical_Systems_Using_Neural_Networks/Example03/: Example03.ipynb
Perceptron/: NNFunctionPlot.ipynb  README.md
PerceptronPlot/: NNFunctionPlot.ipynb  OnePerceptron.ipynb  README.md
StochasticGradientDescent/: Demo.ipynb  Optimizer.py  README.md
Transformer_Pytorch/: transformer.ipynb
